--- a/Css/slider.css
+++ b/Css/slider.css
@@ -2,7 +2,7 @@
 section.slider{
     margin: 0 auto;
     width: 100%;
-    height: auto;
+    height: 800px;
     padding: 0 !important;
     overflow: hidden;
 }
@@ -19,7 +19,7 @@ section.slider{
 
 .slide-box{
     width: 25%;
-    height: auto;
+    height: 25%;
     position: relative;
     text-align: center;
     transition: 1s;
@@ -38,11 +38,12 @@ section.slider{
 }
 
 .nav-manual .manual-btn, .nav-auto div{
-    border: 1px solid #ff0054;
+    border: 1px solid #ff7b00ee;
     padding: 10px;
     border-radius: 50%;
     cursor: pointer;
     transition: 0.2s;
+    margin-top: 170px;
 }
 
 .nav-manual .manual-btn:not(:last-child), .nav-auto div:not(:last-child){
@@ -50,11 +51,11 @@ section.slider{
 }
 
 .nav-manual .manual-btn:hover{
-    background-color: #ff0054;
+    background-color: #ff7b00ee;
 }
 
 #radio1:checked ~ .nav-auto .auto-btn1, #radio2:checked ~ .nav-auto .auto-btn2, #radio3:checked ~ .nav-auto .auto-btn3{
-    background-color: #ff0054;
+    background-color: #ff7b00ee;
 }
 
 #radio1:checked ~ .primeiro{
